@@ -1,0 +1,3 @@
+# Target: OpenBSD/hppa
+TDEPFILES= hppa-tdep.o hppabsd-tdep.o corelow.o solib.o solib-svr4.o
+TM_FILE= tm-bsd.h
